# passepartout

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  Gemfile  README.md  openapitools.json  package-lock.json  package.json  swiftgen.yml
app-cross/: .gitignore  CMakeLists.txt  CMakePresets.json  Package.resolved  Package.swift  abi.yaml  distribute.cmake  libpassepartout.cmake  openapi.yaml  passepartout.cmake  passepartout_shared.cmake  passepartout_shared.swift.in  swift.cmake  wx.cmake
app-cross/Sources/CommonData/: CoreDataPersistentStore.swift
app-cross/Sources/CommonLibrary/: CommonLibrary.swift
app-cross/Sources/CommonLibraryApple/: Bundle+Extensions.swift  ConfigFileApplier+Apple.swift  FoundationLogFormatter.swift  FoundationURLFetcher.swift  HTMLTemplate.swift  JSON+L10n.swift  MultipartForm+URLRequest.swift  NEProfileRepository.swift  NIOWebReceiverHandler.swift  StoreKitHelper.swift  StoreKitReceiptReader.swift  TunnelObservable.swift  UserDefaultsAppPreferences.swift
app-cross/Sources/CommonLibrary_C/: passepartout.c
app-cross/Sources/CommonProviders/: CommonProviders.swift
app-cross/Sources/CommonProvidersAPI/: APIManager.swift  APIMapper.swift  APIRepository.swift  Provider.swift  ProviderManager.swift
app-cross/Sources/CommonProvidersCore/: ProfileType+Providers.swift  ProviderEntity.swift  ProviderModule.swift  ProviderPreset.swift  ProviderScriptingAPI.swift  ProviderTemplateCompiler.swift  Timestamp+Date.swift
app-cross/Sources/Passepartout/: app.cc
app-cross/Tests/CommonProvidersAPITests/: Mock.swift  ProviderManagerTests.swift
app-cross/Tests/CommonProvidersTests/: ProviderModulesTests.swift  ProviderScriptingAPITests.swift  RegistryTests.swift
app-cross/app/: app.cc  main.cc  myapp.cc
app-cross/app/include/: abi.h
app-cross/codegen/abi/: AppBundle.schema.json  AppConfiguration.schema.json  AppConstants.schema.json  AppFeature.schema.json  AppProfileHeader.schema.json  AppTunnelInfo.schema.json  AppTunnelStatus.schema.json  ConfigEventRefresh.schema.json  ConfigFlag.schema.json  Credits.schema.json  DistributionTarget.schema.json  IAPEventEligibleFeatures.schema.json  IAPEventLoadReceipt.schema.json  IAPEventStatus.schema.json  OriginalPurchase.schema.json  ProfileEventChangeRemoteImporting.schema.json  ProfileEventReady.schema.json  ProfileEventRefresh.schema.json  ProfileEventSave.schema.json  ProfileEventStartRemoteImport.schema.json  ProfileSharingFlag.schema.json  ProviderInfo.schema.json  SemanticVersion.schema.json  TunnelEventRefresh.schema.json  VersionEventNew.schema.json  VersionRelease.schema.json  WebFileUpload.schema.json  WebReceiverEventNewUpload.schema.json  WebReceiverEventStart.schema.json  WebReceiverEventStop.schema.json  WebReceiverEventUploadFailure.schema.json  WebsiteWithPasscode.schema.json
app-cross/codegen/partout/: CodableModule.schema.json  CodableProfile.schema.json  LocalLoggerOptions.schema.json  ModuleType.schema.json  ProfileBehavior.schema.json
app-cross/passepartout/: CMakeLists.txt  passepartout.cmake
app-cross/passepartout/app/: abi.cc  app.cc  myapp.cc  myapp.h
app-cross/passepartout/codegen/: main.swift
app-cross/passepartout/shared/: .gitignore
app-cross/passepartout/tunnel/: main.c
app-cross/quicktype/abi/: AppProfileHeader.schema.json  AppUserLevel.schema.json  ConfigEventRefresh.schema.json  IAPEventNewReceipt.schema.json  ProfileEventLocalProfiles.schema.json  ProfileEventStopRemoteImport.schema.json  Timestamp.schema.json  TunnelEventDataCount.schema.json
app-cross/shared/assets/: constants.json
app-cross/src/: app.cc
app-cross/tunnel/: main.c
app-shared/: CMakeLists.txt  Package.resolved  Package.swift  build-android.sh  distribute.cmake  partout  swift.cmake
app-shared/Sources/ABI/: Example.swift
app-shared/Sources/ABIExample_C/: main.c
app-shared/Sources/AppLibrary/: Shared.swift
app-shared/Sources/AppLibraryMain/: AppLibraryMain.swift
app-shared/Sources/AppLibraryTV/: AppLibraryTV.swift
app-shared/Sources/AppLibraryTVLegacy/: AppLibraryTVLegacy.swift
app-shared/Sources/AppStrings/: SwiftGen+Strings.swift
app-shared/Sources/CommonData/: CommonData.swift  CoreDataPersistentStore.swift  CoreDataRepository.swift  Repository.swift
app-shared/Sources/CommonDataPreferences/: CommonData+Preferences.swift
app-shared/Sources/CommonDataProfiles/: CommonData+Profiles.swift
app-shared/Sources/CommonDataProviders/: CommonData+Providers.swift
app-shared/Sources/CommonExample_C/: main.c
app-shared/Sources/CommonLibrary/: AppABI.swift  AppABI_C.swift  CommonABI.swift  CommonABI_C.swift  CommonLibrary.swift  PassepartoutABI.swift  Registry+Passepartout.swift  Shared+API.swift  Shared.swift  TunnelABI+Apple.swift  TunnelABI.swift  TunnelABI_C.swift
app-shared/Sources/CommonLibraryApple/: AppConfiguration+Apple.swift  Bundle+Extensions.swift  CommonLibraryApple.swift  CoreDataPersistentStore.swift  CoreDataRepository.swift  FoundationLogFormatter.swift  HTMLTemplate.swift  IAPManager+Suggestions.swift  JSON+L10n.swift  LocalNetworkPermissionService.swift  MainActor+Sync.swift  MultipartForm+URLRequest.swift  NEProfileRepository.swift  NIOWebReceiver.swift  NIOWebReceiverHandler.swift  Providers+L10n.swift  StoreKitHelper.swift  StoreKitReceiptReader.swift  String+L10n.swift  SystemExtensionManager.swift  TestFlightChecker.swift  TunnelObservable.swift  URL+Extensions.swift  URLSessionUploaderStrategy.swift  UserDefaultsStore.swift
app-shared/Sources/CommonLibraryCore/: CommonLibraryCore.swift
app-shared/Sources/CommonLibraryCore_C/: passepartout.c
app-shared/Sources/CommonLibraryWeb/: NIOWebReceiver.swift  NIOWebReceiverHandler.swift  WebReceiver.swift
app-shared/Sources/CommonLibrary_C/: passepartout.c
app-shared/Sources/CommonProviders/: CommonProviders.swift
app-shared/Sources/CommonProvidersAPI/: API.swift  APIManager.swift  APIMapper.swift  APIRepository.swift  CommonProvidersAPI.swift  InMemoryAPIRepository.swift  InMemoryProviderRepository.swift  Provider+Metadata.swift  Provider.swift  (+4 more)
app-shared/passepartout/: wx.cmake
(+2277 files in other folders)
